<resources>
    <string name="app_name">LKACMF</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_scan">扫码</string>
    <string name="btn_request">请求</string>
    <string name="no_rw_permission">: 没有读写权限</string>
    <string name="seriaport_open_fail">: 串口打开失败</string>
    <string name="qr_text">将二维码放入取景框内</string>
    <string name="qr">二维码扫描</string>
    <string name="em_power_title">请将本二维码拍照发送给鲁科管理员用于生成授权码，并扫描授权码完成授权</string>
    <string name="main">主页</string>
    <string name="analysts">数据分析</string>
    <string name="user_info">说明书</string>


    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="punctation">标点</string>
    <string name="direction">路径</string>
    <string name="thinkness">图层</string>
    <string name="select">探头</string>
    <string name="material">材料</string>
    <string name="screenshot">截图</string>
    <string name="suspend">暂停</string>
    <string name="refresh">刷新</string>
    <string name="detection_mode">检测模式</string>
    <string name="calibration">校准</string>
    <string name="measure">测量</string>
    <string name="forms">报表</string>
    <string name="save">保存</string>
    <string name="back_play">回放</string>
    <string name="reset">复位</string>
    <string name="gate">闸门</string>
    <string name="report">报告</string>
    <string name="screen">框选</string>
    <string name="count">计算</string>
    <string name="setting">设置</string>

    <string name="probe_rate">探头激励频率</string>
    <string name="rate1">1KHz</string>
    <string name="rate2">2KHz</string>
    <string name="rate5">5KHz</string>
    <string name="probe_numb">探头激励值</string>
    <string name="user_encoder">是否使用编码器</string>
    <string name="user">使用</string>
    <string name="no_user">不使用</string>
    <string name="current_wave">当前波形</string>
    <string name="sine_wave">正弦波</string>
    <string name="triangular_wave">三角波</string>
    <string name="square_wave">方波</string>
    <string name="auto">默认</string>
    <string name="T">T字扫描</string>
    <string name="L">焊缝L扫描</string>
    <string name="R">焊缝R扫描</string>
    <string name="C">焊缝扫描</string>
    <string name="Z">Z字扫描</string>
    <string name="material_plate">板材</string>
    <string name="material_seam">焊缝</string>
    <string name="material_corner">拐角</string>
    <string name="write_thinkness">请输入图层厚度</string>

    <string name="image_list">图片列表</string>
    <string name="configuration">配置选项</string>
    <string name="recommend">推荐选项</string>
    <string name="add_configuration">暂无配置选项，请点击添加</string>
    <string name="version_check">版本检测</string>
    <string name="current_version">当前版本</string>
    <string name="file_list">文件列表</string>
    <string name="contact_comp">联系我们</string>
    <string name="exit_project">退出程序</string>
    <string name="last_version">已是最新版本</string>
    <string name="no_data">暂无数据</string>
    <string name="delect_sure">您确定要删除此项数据吗？</string>
    <string name="phone_title">未检测到IC卡，请更换其他设备拨打 0537-2638599</string>
    <string name="version_checking">版本检测中...</string>
    <string name="handler_data">数据请求中...</string>
    <string name="version_data_error">版本信息请求失败</string>
    <string name="have_new_version">发现新版本</string>
    <string name="net_error">网络异常</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="date_error">授权码获取失败</string>
    <string name="add">添加</string>
</resources>