<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/dialog_item_header" />

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:text="@string/current_wave"
                    android:layout_marginBottom="5dp"
                    android:textSize="14dp" />
            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayoutWave"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_tab_bg"
                    app:tabIndicator="@drawable/shape_full_tab_indicator"
                    app:tabIndicatorColor="@color/theme_back_color"
                    app:tabIndicatorFullWidth="true"
                    app:tabIndicatorHeight="30dp"
                    app:tabMinWidth="196dp"
                    app:tabMode="fixed"
                    app:tabSelectedTextColor="@color/red"
                    app:tabTextColor="@color/white">

                <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sine_wave" />

                <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/triangular_wave" />

                <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/square_wave" />
            </com.google.android.material.tabs.TabLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:text="@string/probe_rate"
                    android:layout_marginBottom="5dp"
                    android:textSize="14dp" />
            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayoutRate"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_tab_bg"
                    app:tabIndicator="@drawable/shape_full_tab_indicator"
                    app:tabIndicatorColor="@color/theme_back_color"
                    app:tabIndicatorFullWidth="true"
                    app:tabIndicatorHeight="30dp"
                    app:tabMinWidth="196dp"
                    app:tabMode="fixed"
                    app:tabSelectedTextColor="@color/red"
                    app:tabTextColor="@color/white">

                <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/rate1" />

                <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/rate2" />

                <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/rate5" />
            </com.google.android.material.tabs.TabLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:text="@string/probe_numb"
                    android:layout_marginBottom="5dp"
                    android:textSize="14dp" />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/tvProbeNumb"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="16dp" />
                <SeekBar
                        android:id="@+id/sbProbeNumb"
                        android:layout_width="0dp"
                        android:layout_weight="1.2"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:maxHeight="5.0dp"
                        android:minHeight="5.0dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:text="@string/user_encoder"
                    android:layout_marginBottom="5dp"
                    android:textSize="14dp" />
            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayoutEncode"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_tab_bg"
                    app:tabIndicator="@drawable/shape_full_tab_indicator"
                    app:tabIndicatorColor="@color/theme_back_color"
                    app:tabIndicatorFullWidth="true"
                    app:tabIndicatorHeight="30dp"
                    app:tabMinWidth="196dp"
                    app:tabMode="fixed"
                    app:tabSelectedTextColor="@color/red"
                    app:tabTextColor="@color/white">

                <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/no_user" />

                <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/user" />

            </com.google.android.material.tabs.TabLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="30dp">
        <com.example.lkacmf.view.BaseButton
                android:id="@+id/btnSettingCancel"
                style="@style/BaseButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp"
                android:text="@string/btn_cancel"
                android:layout_marginRight="20dp"/>
        <com.example.lkacmf.view.BaseButton
                android:id="@+id/btnSettingSure"
                style="@style/BaseButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp"
                android:text="@string/btn_sure" />
    </LinearLayout>


</LinearLayout>