<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingDefaultResource">

    <include layout="@layout/dialog_item_header" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

        <EditText
                android:id="@+id/etThinkness"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/linelayout_backthemecolor_radion"
                android:gravity="top|left"
                android:hint="@string/write_thinkness"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:textSize="14dp"
                android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

        <com.example.lkacmf.view.BaseButton
                android:id="@+id/btnThinknessCancel"
                style="@style/BaseButton"
                android:layout_width="0dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/btn_cancel"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp" />

        <com.example.lkacmf.view.BaseButton
                android:id="@+id/btnThinknessSure"
                style="@style/BaseButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/btn_sure"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp" />
    </LinearLayout>
</LinearLayout>