<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_layout">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@color/black">
            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_logo_header"
                    tools:ignore="ContentDescription,RtlHardcoded" />
            <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tbLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@color/black"
                    app:tabIndicatorColor="@color/theme_back_color"
                    app:tabIndicatorHeight="0dp"
                    app:tabMinWidth="120dp"
                    app:tabGravity="start"
                    app:tabSelectedTextColor="@color/color_bg_selected1"
                    app:tabTextColor="@color/theme_color"
                    android:layout_marginLeft="10dp"
                    app:tabBackground="@drawable/tabitem">
                <com.google.android.material.tabs.TabItem
                        android:id="@+id/tbHome"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/main"/>
                <com.google.android.material.tabs.TabItem
                        android:id="@+id/tbAnalysts"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/analysts"/>
                <com.google.android.material.tabs.TabItem
                        android:id="@+id/tbUserInfo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/user_info"/>
            </com.google.android.material.tabs.TabLayout>
        </LinearLayout>


        <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
